log
Thu 24 Aug 2023 07:04:13 PM UTC: 
 list.c | 138 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 123 insertions(+), 15 deletions(-)
 tests:  0|0
813b2ea
Thu 24 Aug 2023 07:05:39 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7562af0
Thu 24 Aug 2023 07:07:56 PM UTC: 
 list.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:113:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  113 |     return NULL;
      |            ^~~~
In file included from test.c:5:
list.c:107:6: note: declared here
  107 | void pushFront(List * list, void * data)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9b927d4
Thu 24 Aug 2023 07:09:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a0930ab
Thu 24 Aug 2023 07:12:20 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1d6f52c
Thu 24 Aug 2023 07:13:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
be611d0
Thu 24 Aug 2023 07:13:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f3049e5
Thu 24 Aug 2023 07:15:18 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
a3b0bb2
Thu 24 Aug 2023 07:17:29 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|0
3273705
Thu 24 Aug 2023 07:19:16 PM UTC: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  0|0
c2f2bc6
Thu 24 Aug 2023 07:21:14 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
6c6c052
Thu 24 Aug 2023 07:23:14 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
02070ca
Thu 24 Aug 2023 07:23:42 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
16e4328
